<resources>
    <string name="app_name">Moodi</string>
    <string name="welcome_to">Welcome to.....</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_password_reenter">Re-enter Password </string>
    <string name="action_sign_in">Register an account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="record">Record</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gotorecord">Record</string>
    <string name="home">Home</string>
    <string name="LogInActivity">Log In</string>
    <string name="SignUpActivity">Sign Up</string>
    <string name="RecordActivity">Drop New Mixtape</string>
    <string name="playback">Playback</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="team_sd_logo">Team SD Logo</string>
    <string name="welcome_to_moodi">Welcome to Moodi!</string>
    <string name="dashboard">Record</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="headertitle">Moodi</string>
    <string name="prefFrench">French</string>
    <string name="prefProfanity">Filter profanity</string>
    <string name="prefscreen">prefscreen</string>
    <string name="prefFrenchSummary">Interprets recordings in French. Default is English.</string>
    <string name="prefProfanitySummary">Censors profanity found in recordings.</string>
    <string name="transcriptLabel">Transcript:</string>
    <string name="confidenceLabel">Confidence:</string>
</resources>

